testsuite/tests/partial-sigs/should_fail/WildcardInDeriving.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInDeriving where

data Foo a = Foo a
           deriving (_)
